# pdf-epub_reader_with_Gemini

./: AI-Assisted MVP Development Design Specs.md  AI-Assisted MVP Development Prompt.md  Phase4_Multimodal_Selection.md  README.md  browser-extension-plan.md  browser-extension-ui-language-plan.md  desktop-capture-plan.md  gem-read_launch.ps1  plotly-visualization-plan.md  pyproject.toml
.github/prompts/: _プロンプトファイルの技術的論評 .md  plan-aiRequestCancelAndTimingStatus.prompt.md  plan-bookmarkPanel.prompt.md  plan-browser-extension-ui-language.prompt.md  plan-browser-extension_phase3.prompt.md  plan-browser-extension_phase4-.prompt.md  plan-browserExtensionPhase0.prompt.md  plan-browserExtensionPhase2.prompt.md  plan-emptyBatchCacheGuard.prompt.md  plan-guiOperationFixes.prompt.md  plan-katexFixCollapsiblePanelExplanationPrompt.prompt.md  plan-phase1InterfacesDtos.prompt.md  plan-phase5SettingsDialog.prompt.md  plan-phase75CacheImprovements.prompt.md  plan-plotlyVisualizationPhase2.prompt.md  plan-unifiedPromptBodyCacheReuse.prompt.md  planGeminiMarkdownExport.prompt.md  plotlyVisualizationPhase3-plan.prompt.md
browser-extension/: .gitignore  index.html  manifest.json  package-lock.json  package.json  tsconfig.json
browser-extension/src/: background.ts  content.ts
docs/: README.md  browser-extension-ui-language-plan.md
docs/developer/: README.md  architecture.md  runtime-flows.md  testing.md
docs/user/: README.md  getting-started.md  operations.md  settings-and-cache.md  troubleshooting.md
src/desktop_capture/: __init__.py  app.py  contracts.py  (+1 more)
tests/: conftest.py
(+110 files in other folders)
